# quantinuum-sphinx

./: .gitignore  README.md  build-demo.sh  build-dist.bat  build-dist.sh  build-ui.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsup.config.ts
.github/workflows/: publish.yml
_static/: index.global.js  injectNav.global.js  tailwind.css
_templates/: page.html
demo/source/: conf.py  index.rst
demo/source/_static/: nav-config.js
demo/source/folder/: b.rst
quantinuum_sphinx/: __init__.py  page.html  theme.toml
quantinuum_sphinx/_static/: styles.css  syncTheme.js
quantinuum_sphinx/_templates/: page.html
react/: .gitignore  .prettierrc  index.global.js  package-lock.json  package.json  syncTheme.ts  tailwind.config.ts  tsconfig.json  tsup.config.ts
react/components/footer/: index.tsx
react/components/navmenu/: ModeSelector.tsx  QuantinuumIdent.tsx  config.tsx  index.css  index.tsx
react/src/: QuantinuumLogo.tsx  injectFooter.tsx  injectNav.tsx  syncTheme.ts
react/src/components/navmenu/: MobileMenu.tsx  NavigationMenu.tsx  index.tsx
react/src/scripts/nav/: index.tsx
static/: injectNav.global.js
static/styles/: quantinuum-ui-tailwind.css
ui/: README.md  globals.d.ts  index.tsx  syncTheme.tsx
ui/navmenu/: MainNavigation.tsx  ModeSelector.tsx  NavigationMenu.tsx  config.tsx
